# predicting-formula-1

./: .env.example  .gitignore  README.md  pyproject.toml
service/dev/: docker-compose.yml
service/src/: entities.py
service/src/data/: database.py  models.py
