[project]
name = "predicting-f1"
version = "0.1.0"
description = ""
authors = [
    {name = "RR-Hack",email = "rawanshady2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "src", from = "service"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
