[project]
name = "predicting-f1"
version = "0.1.0"
description = ""
authors = [
    {name = "RR-Hack",email = "rawanshady2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastf1 (>=3.7.0,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)"
]

[tool.poetry]
packages = [{include = "src", from = "service"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
